# pokemon-tcg-io-rs

./: Cargo.toml  readme.md
src/: client.rs  error.rs  lib.rs  rarities.rs  subtypes.rs  supertypes.rs  types.rs  utils.rs
src/card/: mod.rs
src/card/builders/: get_card.rs  mod.rs  search_cards.rs
src/card/models/: ability.rs  attack.rs  card.rs  card_market.rs  images.rs  mod.rs  tcg_player.rs
src/client/: client.rs  mod.rs
src/models/: card.rs  mod.rs  response.rs
src/models/card/: attack.rs  card.rs  card_market.rs  images.rs  mod.rs  tcg_player.rs
src/models/set/: images.rs  mod.rs  set.rs
src/set/: mod.rs
src/set/builders/: get_set.rs  mod.rs  search_sets.rs
src/set/models/: images.rs  mod.rs  set.rs
