[package]
name = "pokemontcgio"
version = "0.1.0"
edition = "2021"
authors = ["Austin Heil"]
description = "An interface for interacting with the pokemontcg.io REST API"
readme = "readme.md"
repository = "https://github.com/austinmh12/pokemon-tcg-io-rs"
license = "MIT"
keywords = ["pokemon", "rest", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Web
reqwest = { version = "0.12", features = ["json"] }
# Utils
derive_more = { version = "1.0.0", features = ["from", "display"] }

[dev-dependencies]
dotenv = "0.15"